# panorama

./: .gitignore  Cargo.toml  compose.yml  package.json  panorama.toml  pnpm-lock.yaml  pnpm-workspace.yaml
.http/: core.http  discover.http  elasticsearch.http
app/: Cargo.toml
app/src/: http.rs  ipc.rs  main.rs  plugins.rs  types.rs
app/web/: index.html  package.json
app/web/scripts/: update_plugins.sh
app/web/src/: App.tsx  index.css  loadPlugin.ts  main.tsx
app/web/src/routes/: +page.svelte
crates/plugin_shared/: Cargo.toml
crates/plugin_shared/src/: lib.rs
plugins/discover/: Cargo.toml
plugins/discover/src/: main.rs  plugin.rs
plugins/discover/web/: package.json
plugins/discover/web/src/: App.css  App.tsx  lib.tsx  main.tsx  pluginNav.ts  types.ts
plugins/discover/web/src/routes/: Browse.tsx
