[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.8"
hyper = { version = "1.5.0", features = ["server"] }
hyper-util = { version = "0.1.10", features = ["tokio", "server-auto", "http1"] }
tokio = { version = "1.41.1", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
