[package]
name = "discover"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
plugin_shared = {path = '../../crates/plugin_shared'}
reqwest = { version = "0.12.9", features = ["json"] }

